@@ -1691,7 +1691,7 @@ if !ENABLE_JAMVM
 if !ENABLE_CACAO
 if !ZERO_BUILD
 	if [ -e $(BUILD_SDK_DIR)/bin/java ] ; then \
-	  if test "x$(INSTALL_ARCH_DIR)" != "xppc64"; then \
+	  if test "x$(INSTALL_ARCH_DIR)" != "xppc64" -a "x$(INSTALL_ARCH_DIR)" != "xppc64le" ; then \
 	    $(BUILD_SDK_DIR)/bin/java -Xshare:dump ; \
 	  fi ; \
 	fi
@@ -1719,7 +1719,7 @@ if !ENABLE_JAMVM
 if !ENABLE_CACAO
 if !ZERO_BUILD
 	if [ -e $(BUILD_DEBUG_SDK_DIR)/bin/java ] ; then \
-	  if test "x$(INSTALL_ARCH_DIR)" != "xppc64"; then \
+	  if test "x$(INSTALL_ARCH_DIR)" != "xppc64" -a "x$(INSTALL_ARCH_DIR)" != "xppc64le" ; then \
 	    $(BUILD_DEBUG_SDK_DIR)/bin/java -Xshare:dump ; \
 	  fi ; \
 	fi
@@ -1828,7 +1828,7 @@ if !ENABLE_JAMVM
 if !ENABLE_CACAO
 if !ZERO_BUILD
 	if [ -e $(BUILD_BOOT_SDK_DIR)/bin/java ] ; then \
-	  if test "x$(INSTALL_ARCH_DIR)" != "xppc64"; then \
+	  if test "x$(INSTALL_ARCH_DIR)" != "xppc64" -a "x$(INSTALL_ARCH_DIR)" != "xppc64le" ; then \
 	    $(BUILD_BOOT_SDK_DIR)/bin/java -Xshare:dump ; \
 	  fi ; \
 	fi
